tests/ui/errors/snapshots/infer_mut_binding_aliases_constructor_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `boxed.items[0]`
   ╭─[test.lis:7:3]
 6 │   let mut boxed = Box { items: a }
 7 │   boxed.items[0] = 9
   ·   ─────────┬────────
   ·            ╰── `boxed.items` is read-only
 8 │ }
   ╰────
  help: `items` is declared writable, but `boxed` is read-only, so its fields are too. Make `boxed` writable where it is created · code: [infer.write_through_read_only]
