tests/ui/errors/snapshots/infer_mut_binding_aliases_enum.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing write permission
   ╭─[test.lis:5:23]
 4 │ fn test(a: Slice<string>) {
 5 │   let h = Holder.Tags(a)
   ·                       ┬
   ·                       ╰── expected `mut Slice<string>`, found `Slice<string>`
 6 │   if let Holder.Tags(tags) = h {
   ╰────
  help: `mut Slice<string>` permits writes, `Slice<string>` does not. Declare the parameter `a` as `mut Slice<string>` · code: [infer.needs_writable]
