tests/ui/errors/snapshots/infer_mut_binding_aliases_generic_param_fed.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `b2.items[0][0]`
   ╭─[test.lis:6:3]
 5 │   let mut b2 = b1
 6 │   b2.items[0][0] = 9
   ·   ─────────┬────────
   ·            ╰── `b2.items[0]` is read-only
 7 │ }
   ╰────
  help: `b2` shares storage with `b1`, which is read-only. Make `b1` writable, or write to a `.clone()` for an independent copy · code: [infer.write_through_read_only]
