tests/ui/errors/snapshots/infer_mut_binding_aliases_map.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `m2["b"]`
   ╭─[test.lis:5:3]
 4 │   let mut m2 = m
 5 │   m2["b"] = 2
   ·   ─────┬─────
   ·        ╰── `m2` is read-only
 6 │ }
   ╰────
  help: `m2` shares storage with `m`, which is read-only. Make `m` writable, or write to a `.clone()` for an independent copy · code: [infer.write_through_read_only]
