tests/ui/errors/snapshots/infer_mut_binding_aliases_map_index.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `s[0]`
   ╭─[test.lis:4:3]
 3 │   let mut s = m["k"]
 4 │   s[0] = 1
   ·   ────┬───
   ·       ╰── `s` is read-only
 5 │ }
   ╰────
  help: `s` shares storage with `m`, which is read-only. Make `m` writable, or write to a `.clone()` for an independent copy · code: [infer.write_through_read_only]
