tests/ui/errors/snapshots/infer_mut_binding_aliases_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `t[0]`
   ╭─[test.lis:6:3]
 5 │   let mut t = d.tags
 6 │   t[0] = "x"
   ·   ─────┬────
   ·        ╰── `t` is read-only
 7 │ }
   ╰────
  help: `t` shares storage with `d`, which is read-only. Make `d` writable, or write to a `.clone()` for an independent copy · code: [infer.write_through_read_only]
