tests/ui/errors/snapshots/infer_mut_binding_aliases_subslice.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot write to `b[0]`
   ╭─[test.lis:5:3]
 4 │   let mut b = a[1..3]
 5 │   b[0] = 9
   ·   ────┬───
   ·       ╰── `b` is read-only
 6 │ }
   ╰────
  help: `b` shares storage with `a`, which is read-only. Make `a` writable, or write to a `.clone()` for an independent copy · code: [infer.write_through_read_only]
